fix unreadable burger menu

--- a/bucket/main.scss
+++ b/bucket/main.scss
@@ -205,7 +205,7 @@ label[for="nav-trigger"] {
 #burger-menu {
   position: absolute;
   bottom: -330px;
-  background-color: white;
+  background-color: black;
   padding: 1em;
   border: 2px solid black;
   line-height: 40px;
